# imgen

./: .gitignore  LICENSE  README.md  bootstrap.sh  imgen  pyproject.toml  styles.py
src/imgen/: __init__.py  _i2v_resolve.py  _safe.py  _schema.py  _t2x_orchestrator.py  backends.py  build_iteration.py  checks.py  cli.py  cmd_helpers.py  colors.py  config.py  defaults.py  engine_dispatch.py  enhance.py  enhance_decide.py  enhance_runner.py  enhance_runtime.py  hf_cache.py  history.py  images.py  inputs.py  lora_meta.py  models.py  parser.py  paths.py  prompt_input.py  runs.py  shell_rc.py  styles.py  subprocess_helpers.py  tokens.py
src/imgen/commands/: __init__.py  _train_scratch.py  batch.py  clean.py  (+10 more)
tests/: _iteration_argv.py  conftest.py  lora_ab_results.md  test_backends.py  test_batch.py  test_batch_context.py  test_batch_enhance.py  test_batch_logger.py  test_build_config_json.py  test_checks.py  test_clean.py  test_cmd_train.py  test_colors.py  test_config.py  test_diffusers_mps_engine.py  test_doctor_alias.py  test_doctor_backends.py  test_doctor_deprecation_warn.py  test_doctor_enhance.py  test_doctor_hf_whoami.py  test_draw.py  test_engines.py  test_enhance.py  test_enhance_config_cli.py  test_enhance_orchestrator.py  test_enhance_runner.py  test_flux_dev_backend.py  test_generate_cmd.py  test_generate_confirm.py  test_generate_enhance.py  test_generate_heic.py  test_generate_helpers.py  test_history.py  test_i2v_resolve.py  test_images.py  test_inputs.py  test_install_mode.py  test_iteration.py  test_iteration_dryrun_display.py  test_iteration_group.py  (+57 more)
(+6 files in other folders)
